<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCityTitle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cityDonetsk"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="28sp"
            android:textStyle="bold|normal"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/logo"
            android:onClick="goVK"/>
        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCityTitle"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:src="@drawable/ic_menu_button"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/adViewMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:scrollbars="vertical">

                <Button
                    android:id="@+id/btnTramvaj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:drawableLeft="@mipmap/tram"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/Tram"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btnTrolley"/>

                <Button
                    android:id="@+id/btnTrolley"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:drawableLeft="@mipmap/trolley"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/Trolley"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@id/btnBus"
                    app:layout_constraintTop_toBottomOf="@id/btnTramvaj"
                    app:layout_constraintLeft_toLeftOf="@id/btnTramvaj"
                    app:layout_constraintRight_toRightOf="@id/btnTramvaj"/>

                <Button
                    android:id="@+id/btnBus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorButton"
                    android:drawableLeft="@mipmap/bus"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Bus"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@+id/btnMarsh"
                    app:layout_constraintTop_toBottomOf="@id/btnTrolley"
                    app:layout_constraintLeft_toLeftOf="@id/btnTrolley"
                    app:layout_constraintRight_toRightOf="@id/btnTrolley"/>

                <Button
                    android:id="@+id/btnMarsh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorButton"
                    android:drawableLeft="@mipmap/marsh"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Marsh"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintTop_toBottomOf="@id/btnBus"
                    app:layout_constraintBottom_toTopOf="@+id/btnTaxi"
                    app:layout_constraintLeft_toLeftOf="@id/btnBus"
                    app:layout_constraintRight_toRightOf="@id/btnBus"/>

                <Button
                    android:id="@+id/btnTaxi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorButton"
                    android:drawableLeft="@mipmap/taxi"
                    android:text="@string/Taxi"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintTop_toBottomOf="@id/btnMarsh"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/btnMarsh"
                    app:layout_constraintRight_toRightOf="@id/btnMarsh"/>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="#######################">
        </com.google.android.gms.ads.AdView>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>